--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -3,10 +3,11 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".InventoryFragment">
+             tools:context=".screens.InventoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+            android:id="@+id/session_uid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             style="@style/TextAppearance.AppCompat.Display1"
