--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,12 @@
                 app:destination="@id/create_session"/>
     </fragment>
     <fragment android:id="@+id/inventory" android:name="com.eficksan.rpghelper.screens.InventoryFragment"
-              android:label="fragment_inventory" tools:layout="@layout/fragment_inventory"/>
+              android:label="fragment_inventory" tools:layout="@layout/fragment_inventory">
+        <action android:id="@+id/action_inventory_to_addInventoryItemFragment"
+                app:destination="@id/add_inventory_item"/>
+    </fragment>
     <fragment android:id="@+id/create_session" android:name="com.eficksan.rpghelper.screens.CreateSessionFragment"
               android:label="fragment_create_session" tools:layout="@layout/fragment_create_session"/>
+    <fragment android:id="@+id/add_inventory_item" android:name="com.eficksan.rpghelper.screens.AddInventoryItemFragment"
+              android:label="fragment_add_inventory_item" tools:layout="@layout/fragment_add_inventory_item"/>
 </navigation>
