--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -6,19 +6,33 @@
         android:layout_width="match_parent" android:layout_height="match_parent">
     <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                   android:orientation="vertical">
-        <TextView
-                android:paddingHorizontal="@dimen/card_spacing_horizontal"
-                android:paddingVertical="@dimen/card_spacing_vertical"
-                tools:text="1001211 G"
-                android:layout_width="match_parent"
-                android:gravity="center_vertical"
-                android:drawableLeft="@android:drawable/btn_star"
-                android:layout_height="wrap_content"
-                android:id="@+id/money"/>
+        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
+            <TextView
+                    android:paddingHorizontal="@dimen/card_spacing_horizontal"
+                    android:paddingVertical="@dimen/card_spacing_vertical"
+                    tools:text="1001211 G"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:drawableLeft="@android:drawable/btn_star"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/money"/>
+            <TextView
+                    android:paddingHorizontal="@dimen/card_spacing_horizontal"
+                    android:paddingVertical="@dimen/card_spacing_vertical"
+                    tools:text="10.52 kg"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:drawableRight="@android:drawable/btn_star"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/total_weight"/>
+
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/items"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/items"/>
+                android:layout_height="match_parent"/>
     </LinearLayout>
     <!-- TODO: Update blank fragment layout -->
 
