--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,10 +15,13 @@
               android:label="fragment_inventory" tools:layout="@layout/fragment_inventory">
         <action android:id="@+id/action_inventory_to_addInventoryItemFragment"
                 app:destination="@id/add_inventory_item"/>
+        <action android:id="@+id/action_inventory_to_itemDetailsFragment" app:destination="@id/itemDetailsFragment"/>
     </fragment>
     <fragment android:id="@+id/create_session" android:name="com.eficksan.rpghelper.screens.CreateSessionFragment"
               android:label="fragment_create_session" tools:layout="@layout/fragment_create_session"/>
     <fragment android:id="@+id/add_inventory_item"
               android:name="com.eficksan.rpghelper.screens.AddInventoryItemFragment"
               android:label="fragment_add_inventory_item" tools:layout="@layout/fragment_add_inventory_item"/>
+    <fragment android:id="@+id/itemDetailsFragment" android:name="com.eficksan.rpghelper.screens.ItemDetailsFragment"
+              android:label="fragment_item_details" tools:layout="@layout/fragment_item_details"/>
 </navigation>
