--- a/app/src/main/res/layout/fragment_add_inventory_item.xml
+++ b/app/src/main/res/layout/fragment_add_inventory_item.xml
@@ -4,7 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".screens.AddInventoryItemFragment"
+                                                   tools:context=".screens.UpdateItemFragment"
                                                    android:id="@+id/frameLayout3">
     <EditText
             android:layout_width="0dp"
