--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,7 +20,7 @@
     <fragment android:id="@+id/create_session" android:name="com.eficksan.rpghelper.screens.CreateSessionFragment"
               android:label="fragment_create_session" tools:layout="@layout/fragment_create_session"/>
     <fragment android:id="@+id/add_inventory_item"
-              android:name="com.eficksan.rpghelper.screens.AddInventoryItemFragment"
+              android:name="com.eficksan.rpghelper.screens.UpdateItemFragment"
               android:label="fragment_add_inventory_item" tools:layout="@layout/fragment_add_inventory_item"/>
     <fragment android:id="@+id/itemDetailsFragment" android:name="com.eficksan.rpghelper.screens.ItemDetailsFragment"
               android:label="fragment_item_details" tools:layout="@layout/fragment_item_details"/>
